--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   },
   "homepage": "https://github.com/thunderbolt520/keyboard_practice#readme",
   "dependencies": {
+    "@material-ui/core": "^4.3.2",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
     "express": "^4.17.1",
+    "keypress": "^0.2.1",
+    "material-ui": "^0.20.2",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -35,6 +40,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "file-loader": "^4.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6"
   }
