--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "user-input-keyboard": "^0.4.3"
   },
   "devDependencies": {
